# traffic_rules_assistant

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt
api/: app.py
data/processed/: TN traffic rules.txt  TN_traffic_rules.txt  TN_traffic_rules_chunks.json  faiss_cosine_index.idx  faiss_index.idx
data/processed/chroma_index/: chroma.sqlite3
frontend/: frontend.txt  index.html  script.js  styles.css
src/: chunking.py  embedding.py  generator.py  main.py  retriever.py  text_extraction.py
